--- a/views/pages/IndividualBike.hbs
+++ b/views/pages/IndividualBike.hbs
@@ -69,6 +69,7 @@
 
     console.log(array);
 
+
     // Create the cart data object (replace placeholders with actual values)
     const cartdata = {
       name: "{{bikedata.name}}",  // Replace this with the actual bike name
@@ -81,6 +82,27 @@
 
     // Save the updated array back to localStorage
     localStorage.setItem('key', JSON.stringify(array));
+    const cartItems = document.getElementById('cartItems');
+    cartItems.innerHTML = '';
+
+    if (array.length == 0) {
+      cartItems.innerHTML = '<span class= " flex justify-center items-center text-center capitalize text-md font-bold w-full"> your cart is empty </span>'
+    }
+    // Generate HTML for each item
+    array.forEach(item => {
+      const itemHTML = `
+          <div class="cart-item my-4 p-4 bg-gray-200 rounded-lg shadow-md flex items-center">
+            <img src="${item.image}" alt="${item.name}" class="w-20 h-20 object-cover rounded-lg" />
+            <div class="ml-4">
+              <p class="font-medium text-gray-900">${item.name}</p>
+              <p class="text-gray-700">${item.price}</p>
+            </div>
+          </div>
+        `;
+      cartItems.innerHTML += itemHTML;
+    });
+    //calling updatecounter to update the carticon number
+    updateCounter();
   };
 
 </script>
