--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -69,15 +69,18 @@
         <li>
           <a href="#"
             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"><i
-              class="fa-solid fa-cart-shopping" onclick="displayItems()"></i></a>
+              class="fa-solid fa-cart-shopping relative z-10" onclick="displayItems()"></i>
+            <span id="cart-counter"
+              class="absolute top-0 h-4 w-4 rounded-full flex justify-center translate-y-5 translate-x-3 z-0 items-center text-white bg-red-500 text-xs">1</span>
+          </a>
         </li>
       </ul>
     </div>
   </div>
 
   <!-- DisplayHere section -->
-  <div
-    class="absolute top-[12vh] right-0 hidden cart-wrapper w-1/3 z-100 rounded-xl bg-white shadow-lg flex flex-col items-center">
+  <div id="cart-wrapper"
+    class="absolute top-[8vh] right-0  w-0 z-100 cart-wrapper rounded-xl bg-white shadow-lg flex-col items-center transition-all">
     <div id="cartItems" class="overflow-y-auto p-4 flex-grow">
       <!-- Cart items will be injected here -->
     </div>
