--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -10,7 +10,7 @@
         id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown"
         data-dropdown-placement="bottom">
         <span class="sr-only">Open user menu</span>
-        <img class="w-8 h-8 rounded-full" src="images\me.jpeg" alt="user photo" />
+        <img class="w-8 h-8 rounded-full" src="images/me.jpeg" alt="user photo" />
       </button>
       <!-- Dropdown menu -->
       <div
@@ -18,7 +18,7 @@
         id="user-dropdown">
         <div class="px-4 py-3">
           <span class="block text-sm text-gray-900 dark:text-white">Sabeen</span>
-          <span class=" eeezeeblock text-sm text-gray-500 truncate dark:text-gray-400">sabeen@bike.com</span>
+          <span class="block text-sm text-gray-500 truncate dark:text-gray-400">sabeen@bike.com</span>
         </div>
         <ul class="py-2" aria-labelledby="user-menu-button">
           <li>
@@ -64,10 +64,6 @@
         </li>
         <li>
           <a href="#"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
-        </li>
-        <li>
-          <a href="#"
             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"><i
               class="fa-solid fa-cart-shopping relative z-10" onclick="displayItems()"></i>
             <span id="cart-counter"
@@ -79,8 +75,9 @@
   </div>
 
   <!-- DisplayHere section -->
-  <div id="cart-wrapper"
-    class="absolute top-[8vh] right-0  w-0 z-100 cart-wrapper rounded-xl bg-white shadow-lg flex-col items-center transition-all">
+  <div id="cartWrapper"
+    class="absolute top-[8vh] right-0 w-0 z-100 cartWrapper rounded-xl bg-white shadow-lg flex-col items-center transition-all duration-500 ease-in-out overflow-hidden"
+    style="display: none;">
     <div id="cartItems" class="overflow-y-auto p-4 flex-grow">
       <!-- Cart items will be injected here -->
     </div>
